--- a/line.html
+++ b/line.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Interactive Line Chart</title>
+  <title>Interactive Line-Chart</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
